# pycnite

./: .gitignore  .pylintrc  README.md  pyproject.toml  release.sh  setup.cfg
.github/workflows/: ci.yml
pyc_utils/: bytecode.py  linetable.py  magic.py  mapping.py  marshal.py  pyc.py  types.py
pycnite/: __version__.py  bytecode.py  linetable.py  magic.py  mapping.py  types.py
scripts/: diff.py  test.py
tests/: base.py  test_bytecode.py  test_linetable.py  test_magic.py  test_mapping.py  test_marshal.py  test_pyc.py
tests/testdata/: generate.sh
tests/testdata/src/: basic.py  complex_exception.py  exception.py  flow.py  generator.py  genexpr.py  method_calls.py  trivial.py
