[metadata]
name = pycnite
description = Python bytecode utilities
long_description = file: README.md
maintainer = Google LLC
maintainer_email = mdemello@google.com
version = attr:pycnite.__version__.__version__
license_file = LICENSE
license = Apache 2.0
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development

[options]
python_requires = >=3.8
packages = pycnite
